# mini-biomni

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
nano_biomni/: __init__.py  config.py  llm.py  main.py  utils.py
nano_biomni/agent/: paper_parser.py  react.py
nano_biomni/tool/: literature.py  molecular_biology.py  support_tools.py  tool_registry.py
nano_biomni/tool/tool_description/: literature.py  molecular_biology.py  support_tools.py
